# CNN_layer

./: .gitignore  CMakeLists.txt  README.md  autoencoder.py  requirements.txt
doc/imgs/: epoch_0_wash-ir.tiff  epoch_1_wash-ir.tiff  epoch_2_wash-ir.tiff  epoch_3_wash-ir.tiff  epoch_4_wash-ir.tiff  epoch_5_wash-ir.tiff  epoch_6_wash-ir.tiff  epoch_7_wash-ir.tiff  epoch_8_wash-ir.tiff  epoch_9_wash-ir.tiff
inc/: cnn.h  cnn_interface.h  utils.h
src/: cnn.cu  cnn_interface.cc  main.cc  utils.cc
